--- a/index.html
+++ b/index.html
@@ -68,175 +68,187 @@
 
         web3.eth.defaultAccount = web3.eth.accounts[0];
 
-        var icoContract = web3.eth.contract([{
-            "name": "Buy",
-            "inputs": [{
-                "type": "address",
-                "name": "_buyer",
-                "indexed": true
+        var icoContract =
+            web3.eth.contract([{
+                "name": "Buy",
+                "inputs": [{
+                    "type": "address",
+                    "name": "_buyer",
+                    "indexed": true
+                }, {
+                    "type": "uint256",
+                    "name": "_buy_order",
+                    "indexed": false
+                }],
+                "anonymous": false,
+                "type": "event"
             }, {
-                "type": "uint256",
-                "name": "_buy_order",
-                "indexed": false
-            }],
-            "anonymous": false,
-            "type": "event"
-        }, {
-            "name": "Pay",
-            "inputs": [{
-                "type": "address",
-                "name": "_vendor",
-                "indexed": true
+                "name": "Pay",
+                "inputs": [{
+                    "type": "address",
+                    "name": "_vendor",
+                    "indexed": true
+                }, {
+                    "type": "uint256",
+                    "name": "_amount",
+                    "indexed": false
+                }],
+                "anonymous": false,
+                "type": "event"
             }, {
-                "type": "uint256",
-                "name": "_amount",
-                "indexed": false
-            }],
-            "anonymous": false,
-            "type": "event"
-        }, {
-            "name": "burnIt",
-            "outputs": [],
-            "inputs": [{
-                "type": "uint256",
-                "name": "_value"
-            }],
-            "constant": false,
-            "payable": false,
-            "type": "function",
-            "gas": 60388
-        }, {
-            "outputs": [],
-            "inputs": [{
-                "type": "address",
-                "name": "_tokenAddress"
+                "name": "mintIt",
+                "outputs": [],
+                "inputs": [{
+                    "type": "address",
+                    "name": "_to"
+                }, {
+                    "type": "uint256",
+                    "name": "_value"
+                }],
+                "constant": false,
+                "payable": false,
+                "type": "function",
+                "gas": 4509
             }, {
-                "type": "uint256",
-                "name": "_total_shares"
+                "name": "burnIt",
+                "outputs": [],
+                "inputs": [{
+                    "type": "uint256",
+                    "name": "_value"
+                }],
+                "constant": false,
+                "payable": false,
+                "type": "function",
+                "gas": 60388
             }, {
-                "type": "uint256",
-                "name": "initial_price"
+                "name": "transferIt",
+                "outputs": [],
+                "inputs": [{
+                    "type": "address",
+                    "name": "_to"
+                }, {
+                    "type": "uint256",
+                    "name": "_value"
+                }],
+                "constant": false,
+                "payable": false,
+                "type": "function",
+                "gas": 5132
             }, {
-                "type": "uint256",
-                "name": "soft_cap"
-            }],
-            "constant": false,
-            "payable": false,
-            "type": "constructor"
-        }, {
-            "name": "stockAvailable",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 2587
-        }, {
-            "name": "buyStock",
-            "outputs": [],
-            "inputs": [],
-            "constant": false,
-            "payable": true,
-            "type": "function",
-            "gas": 122906
-        }, {
-            "name": "getHolding",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [{
-                "type": "address",
-                "name": "_stockholder"
-            }],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 2117
-        }, {
-            "name": "cash",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 563
-        }, {
-            "name": "payBill",
-            "outputs": [],
-            "inputs": [{
-                "type": "address",
-                "name": "vendor"
+                "outputs": [],
+                "inputs": [{
+                    "type": "address",
+                    "name": "_tokenAddress"
+                }, {
+                    "type": "uint256",
+                    "name": "_total_shares"
+                }],
+                "constant": false,
+                "payable": false,
+                "type": "constructor"
             }, {
-                "type": "uint256",
-                "name": "amount"
-            }],
-            "constant": false,
-            "payable": false,
-            "type": "function",
-            "gas": 38171
-        }, {
-            "name": "totalShares",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1421
-        }, {
-            "name": "price",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1451
-        }, {
-            "name": "softCap",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1481
-        }, {
-            "name": "buy_order",
-            "outputs": [{
-                "type": "uint256",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1511
-        }, {
-            "name": "owner",
-            "outputs": [{
-                "type": "address",
-                "name": ""
-            }],
-            "inputs": [],
-            "constant": true,
-            "payable": false,
-            "type": "function",
-            "gas": 1541
-        }]).at('0x7b3b1049ff4171fe069c0e28a04d8db7e7a9fd37');
+                "name": "stockAvailable",
+                "outputs": [{
+                    "type": "uint256",
+                    "name": ""
+                }],
+                "inputs": [],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 2707
+            }, {
+                "name": "buyStock",
+                "outputs": [],
+                "inputs": [],
+                "constant": false,
+                "payable": true,
+                "type": "function",
+                "gas": 122037
+            }, {
+                "name": "getHolding",
+                "outputs": [{
+                    "type": "uint256",
+                    "name": ""
+                }],
+                "inputs": [{
+                    "type": "address",
+                    "name": "_stockholder"
+                }],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 2237
+            }, {
+                "name": "cash",
+                "outputs": [{
+                    "type": "uint256",
+                    "name": ""
+                }],
+                "inputs": [],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 623
+            }, {
+                "name": "payBill",
+                "outputs": [],
+                "inputs": [{
+                    "type": "address",
+                    "name": "vendor"
+                }, {
+                    "type": "uint256",
+                    "name": "amount"
+                }],
+                "constant": false,
+                "payable": false,
+                "type": "function",
+                "gas": 38231
+            }, {
+                "name": "totalShares",
+                "outputs": [{
+                    "type": "uint256",
+                    "name": ""
+                }],
+                "inputs": [],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 1481
+            }, {
+                "name": "price",
+                "outputs": [{
+                    "type": "uint256",
+                    "name": ""
+                }],
+                "inputs": [],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 1511
+            }, {
+                "name": "buy_order",
+                "outputs": [{
+                    "type": "uint256",
+                    "name": ""
+                }],
+                "inputs": [],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 1541
+            }, {
+                "name": "owner",
+                "outputs": [{
+                    "type": "address",
+                    "name": ""
+                }],
+                "inputs": [],
+                "constant": true,
+                "payable": false,
+                "type": "function",
+                "gas": 1571
+            }]).at('0x7f1ba34485709c4d2b52a5cacae50f35c5507039');
         console.log("icoContract", icoContract);
 
         const buyButton = document.getElementById('buy');
